[workspace]
members = [
    "pulsiora-core",
    "pulsiora-parser",
    "pulsiora-runner",
    "pulsiora-server",
    "pulsiora-client",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Pulsiora Contributors"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# HTTP server/client
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = "1.0"
reqwest = { version = "0.11", features = ["json"] }

# GitHub API
octocrab = "0.36"

# Parsing
pest = "2.7"
pest_derive = "2.7"

# Process execution
which = "6.0"

# Utilities
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4.4", features = ["derive"] }

# Testing
mockito = "1.2"

