[package]
name = "pulsiora-client"
version.workspace = true
edition.workspace = true

[[bin]]
name = "pulse"
path = "src/main.rs"

[dependencies]
pulsiora-core = { path = "../pulsiora-core" }
tokio = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

